finshed the domain , data layers

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,14 @@ environment:
   sdk: ^3.5.3
 
 dependencies:
+  dartz: ^0.10.1
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
   get_it: ^8.0.0
   http: ^1.2.2
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
