--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,11 +15,14 @@ dependencies:
   get_it: ^8.0.0
   http: ^1.2.2
   internet_connection_checker: ^1.0.0+1
+  mockito: ^5.4.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  test: ^1.25.7
+  build_runner: ^2.4.6  # Added build_runner for mockito
 
 flutter:
   uses-material-design: true
